<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/item_margin_top_large"
        android:paddingBottom="@dimen/item_margin_top_large"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin_left_large"
            android:text="@string/tree_details_item_rank"
            android:textColor="@color/colorYellow"/>

        <ImageView
            android:layout_width="@dimen/img_width_25dp"
            android:layout_height="@dimen/img_height_25dp"
            android:layout_marginLeft="@dimen/item_margin_left_large"
            android:src="@drawable/person_head"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin_left_large"
            android:text="陈小明"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tree_details_item_duration"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="@dimen/item_margin_left_large"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tree_details_item_element"
            android:textColor="@color/colorGrey"
            android:layout_marginLeft="@dimen/item_margin_left_large"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin_left_large"/>


    </LinearLayout>



</RelativeLayout>