<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@color/colorShallowGrey">

    <TextView
        android:id="@+id/tv_summary_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/item_margin_left"
        android:layout_marginTop="@dimen/item_margin_top"
        android:text="2017年3月12日9：59"
        android:textColor="@color/colorBlack"/>

    <RelativeLayout
        android:id="@+id/rl_course_item_content"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:layout_below="@+id/tv_summary_item_date">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_course_summary_item_open_to_edit"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:background="@drawable/shape_button_green"
                android:text="@string/course_summary_item_open_to_edit"/>

            <!--<EditText-->
                <!--android:layout_width="130dp"-->
                <!--android:layout_height="40dp"-->
                <!--android:hint="@string/course_summary_item_input_hint"-->
                <!--android:textColorHint="@color/colorGrey"-->
                <!--android:textSize="@dimen/sn_12sp"-->
                <!--android:textColor="@color/colorGrey"-->
                <!--android:gravity="top"-->
                <!--android:scrollbars="vertical"-->
                <!--android:minLines="1"-->
                <!--android:maxLines="50"-->
                <!--android:background="@drawable/shape_course_summary_input"/>-->

            <!--<TextView-->
                <!--android:id="@+id/tv_course_item_limit_time"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textColor="@color/colorBlack"-->
                <!--android:text="05:00"/>-->

            <!--<TextView-->
                <!--android:id="@+id/tv_course_item_attendance_count"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textColor="@color/colorGrey"-->
                <!--android:text="@string/course_attendance_item_attendance_count"/>-->

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/item_margin_bottom"
            android:background="@color/colorBlack"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_summary_item_tips_prefix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/item_margin_right"
                    android:textColor="@color/colorBlack"
                    android:text="@string/course_attendance_item_tips_prefix"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/item_margin_right"
                    android:src="@drawable/water" />

                <TextView
                    android:id="@+id/tv_summary_item_bonus_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:layout_marginRight="@dimen/item_margin_right"
                    android:text="@string/course_attendance_item_bonus_num"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_summary_tips_under"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrey"
                android:text="@string/course_summary_item_tips"/>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/view_group_item_bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rl_course_item_content"
        android:layout_marginLeft="@dimen/item_margin_left"
        android:layout_marginRight="@dimen/item_margin_right"
        android:background="@color/colorBlack"/>

    <RelativeLayout
        android:id="@+id/rl_course_item_enter_class"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:gravity="center"
        android:layout_below="@+id/view_group_item_bottom_divider">

        <TextView
            android:id="@+id/tv_course_summary_item_send_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGreen"
            android:textSize="12sp"
            android:text="@string/course_summary_item_edit_tips"
            android:visibility="visible"
            android:layout_alignParentTop="true" />

        <TextView
            android:id="@+id/tv_course_summary_item_thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGrey"
            android:textSize="12sp"
            android:text="@string/course_summary_item_thanks"
            android:visibility="gone"
            android:layout_alignParentTop="true" />

    </RelativeLayout>

</RelativeLayout>