<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_group_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorShallowGrey"
    android:paddingLeft="@dimen/item_margin_left"
    android:paddingRight="@dimen/item_margin_right">

    <LinearLayout
        android:id="@+id/ll_group_item_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_margin_top"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/img_width_25dp"
            android:layout_height="@dimen/img_height_25dp"
            android:src="@drawable/group_item" />

        <TextView
            android:id="@+id/tv_course_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:text="2017年3月12日9：59"
            android:textColor="@color/colorBlack" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_group_item_leader_group_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_group_item_head"
        android:layout_marginTop="@dimen/item_margin_top"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_leader_name"
                android:textColor="@color/colorBlack" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin_left_large"
                android:background="@drawable/shape_edittext" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_name"
                android:textColor="@color/colorBlack" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/item_margin_left_large"
                android:background="@drawable/shape_edittext" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_group_item_member_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_group_item_leader_group_info"
        android:layout_marginTop="@dimen/item_margin_top"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_group_item_member_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_member_name"
            android:textColor="@color/colorBlack" />

        <LinearLayout
            android:id="@+id/ll_group_members_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin_left_large"
            android:layout_toRightOf="@+id/tv_group_item_member_name"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_member_name_input"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_edittext" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_group_item_add_member"
            android:layout_width="@dimen/img_width_20dp"
            android:layout_height="@dimen/img_height_20dp"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:layout_toRightOf="@+id/ll_group_members_input"
            android:background="@drawable/add" />

    </RelativeLayout>


    <View
        android:id="@+id/view_group_item_bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ll_group_item_member_names"
        android:layout_marginTop="@dimen/item_margin_top"
        android:background="@color/colorBlack" />

    <RelativeLayout
        android:id="@+id/rl_course_item_enter_class"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_below="@+id/view_group_item_bottom_divider"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_group_item_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/group_item_submit"
            android:textColor="@color/colorGreen"
            android:textSize="12sp" />

    </RelativeLayout>

</RelativeLayout>